RESOLVED FIXED158953
Crash in PlatformMediaSession::clientWillPausePlayback
https://bugs.webkit.org/show_bug.cgi?id=158953
Summary Crash in PlatformMediaSession::clientWillPausePlayback
Eric Carlson
Reported 2016-06-20 12:45:22 PDT
The playback controls manager can hold the last reference to an HTMLMediaElement, so clearing it can cause the element to be deleted.
Attachments
Proposed patch (1.67 KB, patch)
2016-06-20 12:53 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2016-06-20 12:45:52 PDT
Eric Carlson
Comment 2 2016-06-20 12:53:24 PDT
Created attachment 281667 [details] Proposed patch
WebKit Commit Bot
Comment 3 2016-06-20 13:30:04 PDT
Comment on attachment 281667 [details] Proposed patch Rejecting attachment 281667 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 281667, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ing rebase: :040000 040000 805564e4d563735440dcb682494f36fdda5c20f1 f3f1d4fa1265a983a518943e7e3a0f794477e6bd M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: http://webkit-queues.webkit.org/results/1538090
Eric Carlson
Comment 4 2016-06-20 13:39:44 PDT
Note You need to log in before you can comment on or make changes to this bug.