Crash in PlatformMediaSession::clientWillPausePlayback https://bugs.webkit.org/show_bug.cgi?id=158953 <rdar://problem/26121125>

Reviewed by Jer Noble.

No new tests, I have not been able to reproduce this in a test.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::stop): Ref the element before calling stopWithoutDestroyingMediaPlayer
  because updatePlaybackControlsManager can release the last reference and cause the
  destructor to be called.
(WebCore::HTMLMediaElement::suspend): Ditto.


Canonical link: https://commits.webkit.org/177012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202238 268f45cc-cd09-0410-ab3c-d52691b4dbfc